test/Fail/ConflictingRelevance.err
ConflictingRelevance.agda:4,34-34
ConflictingRelevance.agda:4,34: Parse error
)<ERROR>
 → A

-- Should fail.  (Curren...
